src/styles/organizers-page.scss
$photo-height: 100px;

.all-workshops {
  max-width: 800px;
}

.role-listing {
  h3 {
    font-weight: bold;
    font-size: 0.85rem;
    text-transform: uppercase;
  }

  margin-bottom: 1rem;

  .member {
    background-color: white;
    margin: 0.5rem;
    padding: 0.75rem 0.5rem;
    border: 1px solid lightgray;
    border-radius: 5px;
    width: 12rem;
    min-height: $photo-height * 1.5;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    &-name {
      font-weight: 500;
    }

    &-photo-wrapper {
      width: $photo-height;
    }

    &-photo-wrapper.placeholder {
      height: 0.15 * $photo-height;
    }

    &-text-details {
      padding: 0 0.5rem;
      width: 100%;
    }

    &-org {
      font-size: 0.85rem;
    }
  }

  &-members {
    display: flex;
    flex-direction: row;
  }
}

.all-committee-organizers {
  font-weight: bold;
  font-size: 0.8rem;
  margin-top: 0.3rem;
}

